# chess

./: CMakeLists.txt  Links  base.cpp  base.h  board.cpp  board.h  move.cpp  move.h  piece.cpp  piece.h  setsqr.cpp  setsqr.h  square.cpp  square.h  test.cpp
base/: base.cpp  base.h  board.cpp  board.h  game.cpp  game.h  move.cpp  move.h  piece.cpp  piece.h  setsqr.cpp  setsqr.h  square.cpp  square.h  test.cpp  test.h
gui/: Ch.pro  chessboardscene.cpp  chessboardscene.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
